@@ -244,9 +244,7 @@ be_visitor_ami4ccm_pre_proc::visit_interface (be_interface * node)
                         -1);
     }
 
-  be_valuetype *excep_holder = be_global->ami4ccm_exceptionholder ();
-  be_interface *reply_handler = this->create_reply_handler (node,
-                                                            excep_holder);
+  be_interface *reply_handler = this->create_reply_handler (node);
   if (reply_handler)
     {
       reply_handler->set_defined_in (node->defined_in ());
@@ -270,6 +268,32 @@ be_visitor_ami4ccm_pre_proc::visit_interface (be_interface * node)
                          "creating the reply handler failed\n"),
                         -1);
     }
+    
+  be_interface *sendc_interface = this->create_ami_sendc_interface (node);
+  if (sendc_interface)
+    {
+      sendc_interface->set_defined_in (node->defined_in ());
+
+      // Insert the ami handler after the node, the
+      // exception holder will be placed between these two later.
+      module->be_add_interface (sendc_interface, node);
+
+      // Remember from whom we were cloned
+      sendc_interface->original_interface (node);
+
+      // If this was created for an imported node, it will be wrong
+      // unless we set it.
+      sendc_interface->set_imported (node->imported ());
+    }
+  else
+    {
+      ACE_ERROR_RETURN ((LM_ERROR,
+                         "(%N:%l) be_visitor_ami4ccm_pre_proc::"
+                         "visit_interface - "
+                         "creating the sendc interface failed\n"),
+                        -1);
+    }
+    
 
   // Set the proper strategy.
   //be_interface_ami_strategy *bias = 0;
@@ -423,8 +447,7 @@ be_visitor_ami4ccm_pre_proc::visit_attribute (be_attribute *node)
 }
 
 be_interface *
-be_visitor_ami4ccm_pre_proc::create_reply_handler (be_interface *node,
-                                                   be_valuetype *excep_holder)
+be_visitor_ami4ccm_pre_proc::create_reply_handler (be_interface *node)
 {
   // We're at global scope here so we need to fool the scope stack
   // for a minute so the correct repo id can be calculated at
@@ -527,8 +550,7 @@ printf ("%s\n", reply_handler_local_name.c_str ());
                                                     reply_handler);
 
               this->create_excep_operation (get_operation,
-                                            reply_handler,
-                                            excep_holder);
+                                            reply_handler);
 
               get_operation->destroy ();
               delete get_operation;
@@ -543,8 +565,7 @@ printf ("%s\n", reply_handler_local_name.c_str ());
                                                         reply_handler);
 
                   this->create_excep_operation (set_operation,
-                                                reply_handler,
-                                                excep_holder);
+                                                reply_handler);
 
                   set_operation->destroy ();
                   delete set_operation;
@@ -561,8 +582,7 @@ printf ("%s\n", reply_handler_local_name.c_str ());
                                                         reply_handler);
 
                   this->create_excep_operation (operation,
-                                                reply_handler,
-                                                excep_holder);
+                                                reply_handler);
                 }
             }
         } // end of while loop
@@ -572,8 +592,171 @@ printf ("%s\n", reply_handler_local_name.c_str ());
 }
 
 be_interface *
-be_visitor_ami4ccm_pre_proc::create_sendc_interface (be_interface *node,
-                                                   be_valuetype *excep_holder)
+be_visitor_ami4ccm_pre_proc::create_ami_sendc_interface (be_interface *node)
+{
+  // We're at global scope here so we need to fool the scope stack
+  // for a minute so the correct repo id can be calculated at
+  // interface construction time.
+  UTL_Scope *s = node->defined_in ();
+  idl_global->scopes ().push (s);
+
+  // Create the reply handler name.
+  ACE_CString reply_handler_local_name;
+  this->generate_name (reply_handler_local_name,
+                       "AMI_",
+                       node->name ()->last_component ()->get_string(),
+                       "");
+printf ("%s\n", reply_handler_local_name.c_str ());
+  UTL_ScopedName *reply_handler_name =
+    static_cast<UTL_ScopedName *> (node->name ()->copy ());
+  reply_handler_name->last_component ()->replace_string (
+                                             reply_handler_local_name.c_str ()
+                                           );
+
+  long n_parents = 0;
+  AST_Type **p_intf =
+    this->create_inheritance_list (node, n_parents);
+
+  if (!p_intf)
+    {
+      ACE_ERROR_RETURN ((LM_ERROR,
+                        "(%N:%l) be_visitor_ami_pre_proc::visit_interface - "
+                        "bad inheritance list\n"),
+                        0);
+    }
+
+  be_interface *reply_handler = 0;
+  ACE_NEW_RETURN (reply_handler,
+                  be_interface (reply_handler_name, // name
+                                p_intf,             // list of inherited
+                                n_parents,          // number of inherited
+                                0,                  // list of all ancestors
+                                0,                  // number of ancestors
+                                true,               // local
+                                0),                 // non-abstract
+                  0);
+printf ("%s\n", reply_handler_local_name.c_str ());
+
+  // Back to reality.
+  idl_global->scopes ().pop ();
+
+  reply_handler->set_name (reply_handler_name);
+  reply_handler->set_defined_in (s);
+
+  // Set repo id to 0, so it will be recomputed on the next access,
+  // and set the prefix to the node's prefix. All this is
+  // necessary in case the node's prefix was modified after
+  // its declaration.
+  reply_handler->AST_Decl::repoID (0);
+  reply_handler->prefix (const_cast<char*> (node->prefix ()));
+
+  reply_handler->gen_fwd_helper_name ();
+
+  // Now our customized reply handler is created, we have to
+  // add the operations and attributes to the scope.
+  // Imported nodes get admitted here, so they can get
+  // the reply handler operations added, in case they are
+  // needed in the inheritance graph traversal for a
+  // child reply handler. However, no exception holder
+  // stuff is executed for an imported node.
+  if (node->nmembers () > 0)
+    {
+      this->elem_number_ = 0;
+      // Initialize an iterator to iterate thru our scope.
+
+      for (UTL_ScopeActiveIterator si (node, UTL_Scope::IK_decls);
+           !si.is_done ();
+           si.next ())
+        {
+          AST_Decl *d = si.item ();
+
+          if (!d)
+            {
+              ACE_ERROR_RETURN ((LM_ERROR,
+                                 "(%N:%l) be_visitor_ami4ccm_pre_proc::visit_interface - "
+                                 "bad node in this scope\n"),
+                                0);
+
+            }
+
+          if (d->node_type () == AST_Decl::NT_attr)
+            {
+              be_attribute *attribute = be_attribute::narrow_from_decl (d);
+
+              if (attribute == 0)
+                {
+                  return 0;
+                }
+
+              be_operation *get_operation =
+                this->generate_get_operation (attribute);
+  be_operation *sendc_marshaling =
+    this->create_sendc_operation (get_operation,
+                                  0); // for arguments = false
+
+  be_operation *sendc_arguments =
+    this->create_sendc_operation (get_operation,
+                                  1); // for arguments = true
+
+  if (0 != sendc_marshaling && 0 != sendc_arguments)
+    {
+      sendc_marshaling->set_defined_in (node);
+
+      sendc_arguments->set_defined_in (node);
+    }
+
+              //this->create_reply_handler_operation (get_operation,
+              //                                      reply_handler);
+
+              //get_operation->destroy ();
+              //delete get_operation;
+              //get_operation = 0;
+
+              //if (!attribute->readonly ())
+              //  {
+              //    be_operation *set_operation =
+              //      this->generate_set_operation (attribute);
+
+              //    this->create_reply_handler_operation (set_operation,
+              //                                          reply_handler);
+
+              //    set_operation->destroy ();
+              //    delete set_operation;
+              //    set_operation = 0;
+              //  }
+            }
+          else
+            {
+              be_operation* operation = be_operation::narrow_from_decl (d);
+
+              if (operation)
+                {
+  be_operation *sendc_marshaling =
+    this->create_sendc_operation (operation,
+                                  0); // for arguments = false
+
+  be_operation *sendc_arguments =
+    this->create_sendc_operation (operation,
+                                  1); // for arguments = true
+
+  if (0 != sendc_marshaling && 0 != sendc_arguments)
+    {
+      sendc_marshaling->set_defined_in (node);
+
+      sendc_arguments->set_defined_in (node);
+    }
+                  //this->create_reply_handler_operation (operation,
+                  //                                      reply_handler);
+                }
+            }
+        } // end of while loop
+    } // end of if
+
+  return reply_handler;
+}
+
+be_interface *
+be_visitor_ami4ccm_pre_proc::create_sendc_interface (be_interface *node)
 {
   // We're at global scope here so we need to fool the scope stack
   // for a minute so the correct repo id can be calculated at
@@ -676,8 +859,7 @@ printf ("%s\n", reply_handler_local_name.c_str ());
                                                     reply_handler);
 
               this->create_excep_operation (get_operation,
-                                            reply_handler,
-                                            excep_holder);
+                                            reply_handler);
 
               get_operation->destroy ();
               delete get_operation;
@@ -692,8 +874,7 @@ printf ("%s\n", reply_handler_local_name.c_str ());
                                                         reply_handler);
 
                   this->create_excep_operation (set_operation,
-                                                reply_handler,
-                                                excep_holder);
+                                                reply_handler);
 
                   set_operation->destroy ();
                   delete set_operation;
@@ -710,8 +891,7 @@ printf ("%s\n", reply_handler_local_name.c_str ());
                                                         reply_handler);
 
                   this->create_excep_operation (operation,
-                                                reply_handler,
-                                                excep_holder);
+                                                reply_handler);
                 }
             }
         } // end of while loop
@@ -723,7 +903,6 @@ printf ("%s\n", reply_handler_local_name.c_str ());
 int
 be_visitor_ami4ccm_pre_proc::create_raise_operation (
     be_decl *node,
-    be_valuetype *excep_holder,
     Operation_Kind operation_kind)
 {
   be_operation *orig_op = 0;
@@ -760,6 +939,8 @@ be_visitor_ami4ccm_pre_proc::create_raise_operation (
                   be_predefined_type (AST_PredefinedType::PT_void,
                                       sn),
                   -1);
+
+  be_valuetype *excep_holder = be_global->ami4ccm_exceptionholder ();
 
   // Name the operation properly
   UTL_ScopedName *op_name =
@@ -1171,8 +1352,7 @@ be_visitor_ami4ccm_pre_proc::create_reply_handler_operation (
 
 int
 be_visitor_ami4ccm_pre_proc::create_excep_operation (be_operation *node,
-                                                 be_interface *reply_handler,
-                                                 be_valuetype *excep_holder)
+                                                 be_interface *reply_handler)
 {
   if (!node)
     {
@@ -1188,6 +1368,8 @@ be_visitor_ami4ccm_pre_proc::create_excep_operation (be_operation *node,
   // Create the return type, which is "void".
   Identifier *id = 0;
   UTL_ScopedName *sn = 0;
+
+  be_valuetype *excep_holder = be_global->ami4ccm_exceptionholder ();
 
   // Create the argument.
   ACE_NEW_RETURN (id,
