@@ -1,3 +1,14 @@
+Tue Jan 12 20:12:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_ami_pre_proc.cpp:
+        * TAO_IDL/be_include/be_visitor_ami_pre_proc.h:
+          No need to pass the exceptionholder through all methods, there is only
+          one
+
+        * TAO_IDL/be/be_visitor_ami4ccm_pre_proc.cpp:
+        * TAO_IDL/be_include/be_visitor_ami4ccm_pre_proc.h:
+          Started generating the AMI_ sendc interface
+
 Tue Jan 12 19:31:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO_IDL/be/be_visitor_ami_pre_proc.cpp:
